<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:icon="@drawable/icon_shortcut" android:id="@+id/main_menu_steam_library" android:title="@string/steam_library" />
        <item android:icon="@drawable/icon_shortcut" android:id="@+id/main_menu_shortcuts" android:title="@string/shortcuts" />
        <item android:icon="@drawable/icon_container" android:id="@+id/main_menu_containers" android:title="@string/containers" />
        <item android:icon="@drawable/icon_input_controls" android:id="@+id/main_menu_input_controls" android:title="@string/input_controls" />
        <item android:icon="@drawable/icon_container" android:id="@+id/main_menu_components" android:title="@string/components" />
        <item android:icon="@drawable/icon_settings" android:id="@+id/main_menu_compatibility" android:title="@string/compatibility" />
        <item android:icon="@drawable/icon_container" android:id="@+id/main_menu_cloud_config" android:title="@string/cloud_config" />
        <item android:icon="@drawable/icon_settings" android:id="@+id/main_menu_offline" android:title="@string/offline_mode" />
        <item android:icon="@drawable/icon_settings" android:id="@+id/main_menu_translation_params" android:title="@string/translation_params" />
        <item android:icon="@drawable/icon_input_controls" android:id="@+id/main_menu_device" android:title="@string/device_title" />
        <item android:icon="@drawable/icon_settings" android:id="@+id/main_menu_performance" android:title="@string/emulator_performance" />
        <item android:icon="@drawable/icon_settings" android:id="@+id/main_menu_settings" android:title="@string/settings" />
        <item android:icon="@drawable/icon_about" android:id="@+id/main_menu_about" android:title="@string/about" />
    </group>
</menu>