<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView style="@style/FieldSetLabel" android:text="@string/translation_params" />

        <LinearLayout style="@style/FieldSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/preset" android:textStyle="bold" />
            <Spinner
                android:id="@+id/SPreset"
                style="@style/ComboBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/translation_preset_entries" />

            <Button
                android:id="@+id/BTResetToPreset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/reset_to_preset" />

            <View style="@style/HorizontalLine" />

            <Button
                android:id="@+id/BTUnlockAdvanced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unlock_advanced" />

            <LinearLayout
                android:id="@+id/LLAdvanced"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
