<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView style="@style/FieldSetLabel" android:text="@string/offline_mode" />

        <LinearLayout style="@style/FieldSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_cached_configs_only"
                android:textSize="14sp"
                android:padding="8dp" />

            <TextView
                android:id="@+id/TVOfflineStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/offline_profile_locked"
                android:textSize="14sp"
                android:padding="8dp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
